kubernetes/fdm/fdm.yaml
apiVersion: v1
kind: Service
metadata:
  name: elderberry
spec:
  type: ExternalName
  externalName: elderberry.cambridge.me
  ports:
  - protocol: TCP
    name: https
    port: 443
  - protocol: TCP
    name: webcam
    port: 22678
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fdm-webcam-basic-auth
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  basicAuth:
    secret: webcam-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fdm-webcam-strip-prefix
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replacePathRegex:
    regex: "^/webcam/(.*)"
    replacement: "/$1"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdm-https
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "fdm.home.cambridge.me"
    secretName: fdm-home-cambridge-me-tls
  rules:
  - host: fdm.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elderberry
            port:
              name: https
---
# yes, the camera stream is plaintext between elderberry and here
# used to be because raspi couldn't handle the AES encryption
# TODO: test https termination at elderberry on latest intel hardware
#
# configure these URLs in fluidd:
# https://user:<password>@fdm.cambridge.me/webcam/stream
# https://user:<password>@fdm.cambridge.me/webcam/snapshot
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdm-webcam
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: fdm-fdm-webcam-basic-auth@kubernetescrd,fdm-fdm-webcam-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "fdm.home.cambridge.me"
    secretName: fdm-home-cambridge-me-tls
  rules:
  - host: fdm.home.cambridge.me
    http:
      paths:
      - path: /webcam
        pathType: Prefix
        backend:
          service:
            name: elderberry
            port:
              name: webcam
